crates/ui/tests/snapshots/snapshots__selection_mode_chip_row_single_pane_80x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(80, 30, &state)"
---
                                                                                
 telegram ▸ Alice Müller                                                        
────────────────────────────────────────────────────────────────────────────────
                                                                                
 ▏ also CI is red on main                                                       
                                                                                
                                                                  You · 22:15 ▏ 
                                                     yeah, reviewing it now ✓ ▏ 
                                                                                
 ▏ Alice · 22:18                                                                
 ▏ take your time, no rush                                                      
                                                                                
 ▏ Bob · 22:21                                                                  
 ▏ hey team                                                                     
                                                                                
                                                                  You · 22:22 ▏ 
                                                                     hi bob ✓ ▏ 
                                                                                
 ▏ Bob · 22:23                                                                  
 ▏ 📎  architecture.pdf · 2.4 MB · ⏎ download                                    
 ▏ take a look                                                                  
                                                                                
                                                                  You · 22:28 ▏ 
                                                                    will do ✓ ▏ 
                                                                                
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ ›  message…                                                                │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
                                                                                
 [R Reply] [F Forward] [L Download] [D Delete]
