crates/ui/tests/snapshots/snapshots__sidebar_archive_active_100x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(100, 30, &state)"
---
                              │                                                                     
 ARCHIVE                      │ telegram-tui                                                        
                              ├─────────────────────────────────────────────────────────────────────
 esc/a  back                  │                                                                     
 ▏ Old Chat                12 │ ┌─────────────────────────────────────────────────────────────────┐ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                          select a chat                          │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ │                                                                 │ 
                              │ └─────────────────────────────────────────────────────────────────┘ 
                              │                                                                     
                              │ ╭─────────────────────────────────────────────────────────────────╮ 
                              │ │ ›  message…                                                     │ 
                              │ ╰─────────────────────────────────────────────────────────────────╯ 
                                                                                                    
 ↑↓ move   ⏎ open   / filter   ctrl+p palette   ? help
