crates/ui/tests/snapshots/snapshots__sidebar_pinned_archive_and_folder_tabs_140x40.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(140, 40, &state)"
---
                              │                                                                                                             
 CHATS                        │ telegram-tui                                                                                                
                              ├─────────────────────────────────────────────────────────────────────────────────────────────────────────────
 Main · Folder 1 · Folder 2   │                                                                                                             
   Archived  12               │                                                                                                             
 ▏ Alice Müller             2 │                                                                                                             
   Boss                       │                                                                                                             
 ──────────────────────────── │                                                                                                             
   Team Rust                9 │                                                                                                             
   Mom                        │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                select a chat                                                
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │                                                                                                             
                              │ ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────╮ 
                              │ │ ›  message…                                                                                             │ 
                              │ ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯ 
                                                                                                                                            
 ↑↓ move   ⏎ open   / filter   ctrl+p palette   ? help
