crates/ui/tests/snapshots/snapshots__single_pane_stack_breadcrumb_and_conversation_80x40.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(80, 40, &state)"
---
┌ telegram-tui ────────────────────────────────────────────────────────────────┐
│telegram ▸ Alice Müller                                                       │
│┌────────────────────────────────────────────────────────────────────────────┐│
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││                                                                            ││
││▏ Alice · 22:13                                                             ││
││▏ hey, did you see the PR?                                                  ││
││▏ also CI is red on main                                                    ││
││                                                                            ││
││                                                               You · 22:15 ▏││
││                                                  yeah, reviewing it now ✓ ▏││
││                                                                            ││
││▏ Alice · 22:18                                                             ││
││▏ take your time, no rush                                                   ││
││                                                                            ││
││▏ Bob · 22:21                                                               ││
││▏ hey team                                                                  ││
││                                                                            ││
││                                                               You · 22:22 ▏││
││                                                                  hi bob ✓ ▏││
││                                                                            ││
││▏ Bob · 22:23                                                               ││
││▏ 📎  architecture.pdf · 2.4 MB · ⏎ download                                 ││
││▏ take a look                                                               ││
││                                                                            ││
││                                                               You · 22:28 ▏││
││                                                                 will do ✓ ▏││
│└────────────────────────────────────────────────────────────────────────────┘│
│╭────────────────────────────────────────────────────────────────────────────╮│
││›  message…                                                                 ││
│╰────────────────────────────────────────────────────────────────────────────╯│
│⏎ send   alt+⏎ newline   ↑ select messages                                    │
└──────────────────────────────────────────────────────────────────────────────┘
