crates/ui/tests/snapshots/snapshots__single_pane_stack_full_width_chat_list_80x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(80, 30, &state)"
---
                                                                                
 CHATS                                                                          
                                                                                
 ▏ Alice Müller                                                               2 
   Team Rust                                                                  9 
   Bob                                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 ↑↓ move   ⏎ open   / filter   ctrl+p palette   ? help
