crates/ui/tests/snapshots/snapshots__toast_stack_over_single_pane_chat_list_80x30.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(80, 30, &state)"
---
                                                                                
 CHATS                                                                          
                                                                                
 ▏ Alice Müller                                                               2 
   Team Rust                                                                  9 
   Bob                                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                           ╭──────────────────────────────────╮ 
                                           │  Grace Hopper                    │ 
                                           │  the compiler is done            │ 
                                           ╰──────────────────────────────────╯ 
 ↑↓ move   ⏎ open   / filter   ctrl+p palette   ? help
