crates/ui/tests/snapshots/snapshots__toast_stack_over_two_pane_140x40.snap
---
source: crates/ui/tests/snapshots.rs
expression: "render(140, 40, &state)"
---
                              │                                                                                                             
 CHATS                        │ Alice Müller                                                                                                
                              ├─────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ▏ Alice Müller             2 │                                                                                                             
   Team Rust                9 │ ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
   Bob                        │ │                                                                                                         │ 
                              │ │                                                                                                         │ 
                              │ │Alice · 22:13                                                                                            │ 
                              │ │▏ hey, did you see the PR?                                                                               │ 
                              │ │▏ also CI is red on main                                                                                 │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                            You · 22:15  │ 
                              │ │                                                                                 yeah, reviewing it now ▏│ 
                              │ │                                                                                                        ✓│ 
                              │ │                                                                                                         │ 
                              │ │Alice · 22:18                                                                                            │ 
                              │ │▏ take your time, no rush                                                                                │ 
                              │ │                                                                                                         │ 
                              │ │Bob · 22:21                                                                                              │ 
                              │ │▏ hey team                                                                                               │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                            You · 22:22  │ 
                              │ │                                                                                                 hi bob ▏│ 
                              │ │                                                                                                        ✓│ 
                              │ │                                                                                                         │ 
                              │ │Bob · 22:23                                                                                              │ 
                              │ │▏ 📎  architecture.pdf · 2.4 MB                                                                           │ 
                              │ │  📎  architecture.pdf · 2.4 MB · ⏎ download                                                              │ 
                              │ │▏ take a look                                                                                            │ 
                              │ │                                                                                                         │ 
                              │ │                                                                                            You · 22:28  │ 
                              │ │                                                                      ╭──────────────────────────────────╮ 
                              │ │                                                                      │  Grace Hopper                    │ 
                              │ └──────────────────────────────────────────────────────────────────────│  the compiler is done            │ 
                              │                                                                        ╰──────────────────────────────────╯ 
                              │ ╭──────────────────────────────────────────────────────────────────────╭──────────────────────────────────╮ 
                              │ │ ›  message…                                                          │  Ada Lovelace                    │ 
                              │ ╰──────────────────────────────────────────────────────────────────────│  see you at 6                    │ 
                                                                                                       ╰──────────────────────────────────╯ 
 ⏎ send   alt+⏎ newline   ↑ select messages
